--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^5.2.0",
     "core-js": "^3.25.3",
+    "font-awesome": "^4.7.0",
+    "node-sass": "6.0.1",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "sass-loader": "^10.2.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+  }
 }
