made some changes

--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "bootstrap": "^5.2.0",
     "core-js": "^3.25.3",
     "font-awesome": "^4.7.0",
-    "node-sass": "6.0.1",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10",
-    "sass-loader": "^10.2.1"
+    "vue-template-compiler": "^2.7.10"
+
   },
   "devDependencies": {
+    "@nuxt/types": "~2.15.0",
+    "@nuxtjs/style-resources": "^1.2.1",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^4.3.0",
+    "sass-loader": "^10.3.1"
   }
 }
