--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "bootstrap": "^5.2.0",
     "core-js": "^3.25.3",
     "font-awesome": "^4.7.0",
+    "leaflet": "^1.9.3",
     "nuxt": "^2.15.8",
+    "nuxt-leaflet": "^0.0.27",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
-
+    "vue-template-compiler": "^2.7.10",
+    "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
     "@nuxt/types": "~2.15.0",
     "@nuxtjs/style-resources": "^1.2.1",
     "node-sass": "^7.0.1",
+    "nuxt-leaflet": "^0.0.27",
+    "leaflet": "^1.9.3",
     "postcss": "^8.4.14",
     "postcss-loader": "^4.3.0",
     "sass-loader": "^10.3.1"
