--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "core-js": "^3.25.3",
     "font-awesome": "^4.7.0",
     "nuxt": "^2.15.8",
+    "nuxt-leaflet": "^0.0.27",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
-
   },
   "devDependencies": {
     "@nuxt/types": "~2.15.0",
