--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.25.3",
     "font-awesome": "^4.7.0",
     "nuxt": "^2.15.8",
+    "nuxt-i18n": "^6.28.1",
     "nuxt-leaflet": "^0.0.27",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
